Fixed some bugs in the leader change (although it still needs plenty of work, specially when re-integrating the replica).
Fixed a bug related to read only requests. Moved RadomDemo to a dedicated package.

State transfer protocol can now notify the recovered replica about the most recente view. 

Added apache codecs do deal with base64 encode/decode.